feat:调色板,tailwind主题配置

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -16,7 +16,7 @@ body {
   color: var(--van-text-color);
   background-color: var(--color-background-2);
 }
-
+//主题切换
 html {
   height: 100%;
   box-sizing: border-box;
