--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -9,3 +9,4 @@ html.dark {
   --color-background-2: var(--van-background-2, #1c1c1e);
   --color-block-background: var(--van-border-color, #3a3a3c);
 }
+//主题切换
