fix:按钮的自动填充满一半,字体引入问题

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Cactus+Classical+Serif&family=Chocolate+Classical+Sans&family=LXGW+WenKai+Mono+TC&family=LXGW+WenKai+TC&family=Noto+Sans+HK:wght@100..900&family=Noto+Serif+HK:wght@200..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cactus+Classical+Serif&family=LXGW+WenKai+Mono+TC&family=Ma+Shan+Zheng&family=Noto+Sans+HK:wght@100..900&family=Noto+Sans+TC:wght@100..900&family=Noto+Serif+HK:wght@200..900&family=Noto+Serif+TC:wght@200..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Noto+Serif+TC:wght@200..900&family=Zhi+Mang+Xing&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -92,12 +93,12 @@
 .theme-color-green {
   /* 主色 */
   --color-primary: 34 193 34; /* 草绿色 */
-  --color-secondary: 18 140 18; /* 深绿 */
+  --color-secondary: 193 234 211; /* 森林绿 */
 
   /* 背景色 */
   --color-background-base: 255 255 255; /* 白色 */
   --color-background-primary: 34 193 34; /* 草绿色 */
-  --color-background-secondary: 18 140 18; /* 深绿 */
+  --color-background-secondary: 193 234 211; /* 森林绿 */
 
   /* 按钮 */
   --color-button-primary: 34 193 34; /* 草绿色 */
@@ -107,16 +108,16 @@
 
   /* 主文本颜色 */
   --color-text-base: 0 0 0; /* 黑色 */
-  --color-text-muted: 136 136 136; /* 中灰色 */
-  --color-text-inverted: 34 193 34; /* 草绿色 */
+  --color-text-muted: 105 105 105; /* 灰色 */
+  --color-text-inverted: 255 255 255; /* 白色 */
   --color-text-primary: 34 193 34; /* 草绿色 */
-  --color-text-secondary: 18 140 18; /* 深绿 */
+  --color-text-secondary: 0 100 0; /* 森林绿 */
 
   /* 边框颜色 */
-  --color-border-base: 18 140 18; /* 深绿 */
+  --color-border-base: 0 100 0; /* 森林绿 */
   --color-border-primary: 34 193 34; /* 草绿色 */
-  --color-border-secondary: 18 140 18; /* 深绿 */
-  --color-border-muted: 136 136 136; /* 中灰色 */
+  --color-border-secondary: 0 100 0; /* 森林绿 */
+  --color-border-muted: 105 105 105; /* 灰色 */
   --color-border-inverted: 255 255 255; /* 白色 */
 
   /* 链接颜色 */
@@ -126,17 +127,18 @@
   /* 状态色 */
   --color-error: 255 69 58; /* 番茄红 */
   --color-success: 50 205 50; /* 石灰绿 */
-  --color-separator: 120 144 156; /* 灰蓝色 */
+  --color-separator: 0 100 0; /* 森林绿 */
 }
+
 .theme-color-red {
   /* 主色 */
   --color-primary: 255 0 0; /* 红色 */
-  --color-secondary: 139 0 0; /* 深红 */
+  --color-secondary: 222 184 184; /* 深红 */
 
   /* 背景色 */
   --color-background-base: 255 255 255; /* 白色 */
   --color-background-primary: 255 0 0; /* 红色 */
-  --color-background-secondary: 139 0 0; /* 深红 */
+  --color-background-secondary: 222 184 184; /* 深红 */
 
   /* 按钮 */
   --color-button-primary: 255 0 0; /* 红色 */
@@ -146,8 +148,8 @@
 
   /* 主文本颜色 */
   --color-text-base: 0 0 0; /* 黑色 */
-  --color-text-muted: 136 136 136; /* 中灰色 */
-  --color-text-inverted: 255 0 0; /* 红色 */
+  --color-text-muted: 105 105 105; /* 灰色 */
+  --color-text-inverted: 255 255 255; /* 白色 */
   --color-text-primary: 255 0 0; /* 红色 */
   --color-text-secondary: 139 0 0; /* 深红 */
 
@@ -155,7 +157,7 @@
   --color-border-base: 139 0 0; /* 深红 */
   --color-border-primary: 255 0 0; /* 红色 */
   --color-border-secondary: 139 0 0; /* 深红 */
-  --color-border-muted: 136 136 136; /* 中灰色 */
+  --color-border-muted: 105 105 105; /* 灰色 */
   --color-border-inverted: 255 255 255; /* 白色 */
 
   /* 链接颜色 */
@@ -165,36 +167,37 @@
   /* 状态色 */
   --color-error: 255 0 0; /* 红色 */
   --color-success: 50 205 50; /* 石灰绿 */
-  --color-separator: 128 0 0; /* 深红棕色 */
+  --color-separator: 139 0 0; /* 深红 */
 }
+
 .theme-color-white {
   /* 主色 */
   --color-primary: 255 255 255; /* 白色 */
-  --color-secondary: 200 200 200; /* 浅灰 */
+  --color-secondary: 169 169 169; /* 暗灰色 */
 
   /* 背景色 */
   --color-background-base: 255 255 255; /* 白色 */
-  --color-background-primary: 255 255 255; /* 白色 */
-  --color-background-secondary: 200 200 200; /* 浅灰 */
+  --color-background-primary: 240 240 240; /* 淡灰色 */
+  --color-background-secondary: 169 169 169; /* 暗灰色 */
 
   /* 按钮 */
-  --color-button-primary: 255 255 255; /* 白色 */
+  --color-button-primary: 240 240 240; /* 淡灰色 */
   --color-button-background-base: 255 255 255; /* 白色 */
-  --color-button-background-primary: 255 255 255; /* 白色 */
+  --color-button-background-primary: 240 240 240; /* 淡灰色 */
   --color-button-text-primary: 0 0 0; /* 黑色 */
 
   /* 主文本颜色 */
   --color-text-base: 0 0 0; /* 黑色 */
-  --color-text-muted: 100 100 100; /* 灰色 */
+  --color-text-muted: 105 105 105; /* 灰色 */
   --color-text-inverted: 255 255 255; /* 白色 */
   --color-text-primary: 0 0 0; /* 黑色 */
-  --color-text-secondary: 100 100 100; /* 灰色 */
+  --color-text-secondary: 169 169 169; /* 暗灰色 */
 
   /* 边框颜色 */
-  --color-border-base: 200 200 200; /* 浅灰 */
-  --color-border-primary: 200 200 200; /* 浅灰 */
-  --color-border-secondary: 200 200 200; /* 浅灰 */
-  --color-border-muted: 100 100 100; /* 灰色 */
+  --color-border-base: 169 169 169; /* 暗灰色 */
+  --color-border-primary: 169 169 169; /* 暗灰色 */
+  --color-border-secondary: 169 169 169; /* 暗灰色 */
+  --color-border-muted: 105 105 105; /* 灰色 */
   --color-border-inverted: 255 255 255; /* 白色 */
 
   /* 链接颜色 */
@@ -204,5 +207,5 @@
   /* 状态色 */
   --color-error: 255 69 58; /* 番茄红 */
   --color-success: 50 205 50; /* 石灰绿 */
-  --color-separator: 200 200 200; /* 浅灰 */
+  --color-separator: 169 169 169; /* 暗灰色 */
 }
